--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "node test.js"
   },
   "repository": "git@github.com:AyamotoKohei/secret-board.git",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "pug": "2.0.4"
+  }
 }
