--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cookies": "0.8.0",
     "dayjs": "1.10.4",
+    "htpasswd": "2.4.4",
     "http-auth": "4.1.9",
     "pg": "8.5.1",
     "pg-hstore": "2.3.3",
