add: セッション固定化攻撃に対する対策の追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,10 @@ services:
       TZ: "Asia/Tokyo"
     volumes:
       - ../secret-board-db:/var/lib/postgresql/data
+  password-challenger:
+    build: .
+    tty: true
+    volumes:
+      - ../password-challenger:/app
+    depends_on:
+      - app
